--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "npm run eslint",
     "eslint": "eslint --ext .js src/",
     "start": "node ./src/service/service.js",
-    "start.dev": "nodemon ./src/service/service.js"
+    "start.dev": "nodemon ./src/service/service.js --server"
   },
   "author": "Denis Popov",
   "license": "ISC",
