--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "devDependencies": {
     "eslint": "7.30.0",
     "eslint-config-htmlacademy": "0.6.0",
-    "nodemon": "2.0.9"
+    "nodemon": "2.0.9",
+    "pug-lint": "2.6.0"
   },
   "dependencies": {
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "pug": "3.0.2"
   }
 }
