--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "npm run eslint",
     "eslint": "eslint --ext .js src/",
     "start": "node ./src/service/service.js",
-    "server": "nodemon ./src/service/service.js --server"
+    "server": "nodemon ./src/service/service.js --server",
+    "start-front-server": "nodemon ./src/express/index.js"
   },
   "author": "Denis Popov",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "pug-lint": "2.6.0"
   },
   "dependencies": {
+    "axios": "0.21.1",
     "express": "4.17.1",
     "multer": "1.4.2",
     "nanoid": "3.1.23",
