--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "7.30.0",
     "eslint-config-htmlacademy": "0.6.0",
     "nodemon": "2.0.9",
+    "pino-pretty": "5.1.0",
     "pug-lint": "2.6.0"
   },
   "dependencies": {
@@ -23,6 +24,7 @@
     "express": "4.17.1",
     "multer": "1.4.2",
     "nanoid": "3.1.23",
+    "pino": "6.11.3",
     "pug": "3.0.2"
   }
 }
