--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "\"Buy. Sell\"",
   "main": "./src/service/service.js",
   "scripts": {
-    "test": "npm run eslint",
+    "test": "npm run eslint && jest",
     "eslint": "eslint --ext .js src/",
     "start": "node ./src/service/service.js",
     "server": "nodemon ./src/service/service.js --server",
@@ -12,9 +12,17 @@
   },
   "author": "Denis Popov",
   "license": "ISC",
+  "jest": {
+    "verbose": true,
+    "setupFilesAfterEnv": [
+      "jest-extended"
+    ]
+  },
   "devDependencies": {
     "eslint": "7.30.0",
     "eslint-config-htmlacademy": "0.6.0",
+    "jest": "27.0.6",
+    "jest-extended": "^0.11.5",
     "nodemon": "2.0.9",
     "pino-pretty": "5.1.0",
     "pug-lint": "2.6.0"
