--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "npm run eslint && jest",
     "eslint": "eslint --ext .js src/",
-    "start": "node ./src/service/service.js",
-    "server": "nodemon ./src/service/service.js --server",
+    "generate": "node ./src/service/service.js --generate",
+    "start": "nodemon ./src/service/service.js --server",
     "start-front-server": "nodemon ./src/express/index.js"
   },
   "author": "Denis Popov",
@@ -25,10 +25,13 @@
     "jest-extended": "^0.11.5",
     "nodemon": "2.0.9",
     "pino-pretty": "5.1.0",
-    "pug-lint": "2.6.0"
+    "pug-lint": "2.6.0",
+    "supertest": "6.1.3"
   },
   "dependencies": {
     "axios": "0.21.1",
+    "cross-env": "7.0.3",
+    "dotenv": "10.0.0",
     "express": "4.17.1",
     "multer": "1.4.2",
     "nanoid": "3.1.23",
