--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "npm run eslint && jest",
     "eslint": "eslint --ext .js src/",
     "generate": "node ./src/service/service.js --generate",
-    "start": "nodemon ./src/service/service.js --server",
-    "start-front-server": "nodemon ./src/express/index.js"
+    "start": "cross-env NODE_ENV=development COLOR=true nodemon ./src/service/service.js --server",
+    "start-front-server": "cross-env NODE_ENV=development COLOR=true IS_FRONT=true nodemon ./src/express/index.js"
   },
   "author": "Denis Popov",
   "license": "ISC",
