--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "npm run eslint && jest",
     "eslint": "eslint --ext .js src/",
-    "generate": "node ./src/service/service.js --generate",
+    "generate": "cross-env NODE_ENV=development COLOR=true node ./src/service/service.js --generate",
     "start": "cross-env NODE_ENV=development COLOR=true nodemon ./src/service/service.js --server",
     "start-front-server": "cross-env NODE_ENV=development COLOR=true IS_FRONT=true nodemon ./src/express/index.js"
   },
