--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "test": "npm run eslint && jest",
     "eslint": "eslint --ext .js src/",
-    "generate": "cross-env NODE_ENV=development COLOR=true node ./src/service/service.js --generate",
-    "start": "cross-env NODE_ENV=development COLOR=true nodemon ./src/service/service.js --server",
-    "start-front-server": "cross-env NODE_ENV=development COLOR=true IS_FRONT=true nodemon ./src/express/index.js"
+    "generate": "cross-env NODE_ENV=production COLOR=true node ./src/service/service.js --generate",
+    "start": "cross-env NODE_ENV=production nodemon ./src/service/service.js --server",
+    "start::debug": "cross-env NODE_ENV=development COLOR=true nodemon ./src/service/service.js --server",
+    "start-front-server": "cross-env NODE_ENV=production IS_FRONT=true nodemon ./src/express/index.js",
+    "start-front-server::debug": "cross-env NODE_ENV=development COLOR=true IS_FRONT=true nodemon ./src/express/index.js"
   },
   "author": "Denis Popov",
   "license": "ISC",
