--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "nanoid": "3.1.23",
     "pg": "8.6.0",
     "pino": "6.11.3",
-    "pug": "2.0.4"
+    "pug": "2.0.4",
+    "sequelize": "6.6.5"
   }
 }
