--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "npm run eslint && jest",
     "eslint": "eslint --ext .js src/",
     "generate": "cross-env NODE_ENV=production COLOR=true node ./src/service/service.js --generate",
+    "fill-db": "cross-env NODE_ENV=development COLOR=true node ./src/service/service.js --filldb",
     "start": "cross-env NODE_ENV=production nodemon ./src/service/service.js --server",
     "start::debug": "cross-env NODE_ENV=development COLOR=true nodemon ./src/service/service.js --server",
     "start-front-server": "cross-env NODE_ENV=production IS_FRONT=true nodemon ./src/express/index.js",
