--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nodemon": "2.0.9",
     "pino-pretty": "5.1.0",
     "pug-lint": "2.6.0",
+    "sequelize-cli": "6.2.0",
     "sqlite3": "5.0.2",
     "supertest": "6.1.3"
   },
