--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cross-env": "7.0.3",
     "dotenv": "10.0.0",
     "express": "4.17.1",
+    "express-session": "1.17.2",
     "multer": "1.4.2",
     "nanoid": "3.1.23",
     "pg": "8.6.0",
