--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "axios": "0.21.1",
+    "connect-session-sequelize": "7.1.1",
     "cookie-parser": "1.4.5",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
@@ -50,6 +51,7 @@
     "express-session": "1.17.2",
     "express-validator": "6.12.1",
     "helmet": "4.6.0",
+    "joi": "17.4.2",
     "multer": "1.4.2",
     "nanoid": "3.1.23",
     "pg": "8.6.0",
