--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "axios": "0.21.1",
+    "bcrypt": "5.0.1",
     "connect-session-sequelize": "7.1.1",
     "cookie-parser": "1.4.5",
     "cors": "2.8.5",
