--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "express-session": "1.17.2",
     "express-validator": "6.12.1",
     "helmet": "4.6.0",
+    "http-status-codes": "2.1.4",
     "joi": "17.4.2",
+    "jsonwebtoken": "8.5.1",
     "multer": "1.4.2",
     "nanoid": "3.1.23",
     "pg": "8.6.0",
